This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Warning when compiling _elementree.c
Type: compile error Stage: resolved
Components: Build Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: scoder Nosy List: matrixise, scoder
Priority: normal Keywords: patch

Created on 2019-05-06 14:27 by matrixise, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 13109 merged scoder, 2019-05-06 14:45
Messages (4)
msg341507 - (view) Author: Stéphane Wirtel (matrixise) * (Python committer) Date: 2019-05-06 14:27
Hi Stefan,

When I compile the last master, I get this warning.

Could do you try?

Thanks

/home/stephane/src/github.com/python/cpython/Include -I/home/stephane/src/github.com/python/cpython -c /home/stephane/src/github.com/python/cpython/Modules/_elementtree.c -o build/temp.linux-x86_64-3.8-pydebug/home/stephane/src/github.com/python/cpython/Modules/_elementtree.o
/home/stephane/src/github.com/python/cpython/Modules/_elementtree.c: In function ‘checkpath’:
/home/stephane/src/github.com/python/cpython/Modules/_elementtree.c:1174:44: warning: suggest parentheses around ‘&&’ within ‘||’ [-Wparentheses]
                 p[1] == '}' || p[1] == '*' && p[2] == '}')) {
                                ~~~~~~~~~~~~^~~~~~~~~~~~~~
msg341537 - (view) Author: Stefan Behnel (scoder) * (Python committer) Date: 2019-05-06 15:36
New changeset 6b95149eccac540a911a5ada03fcb7d623a0de37 by Stefan Behnel in branch 'master':
bpo-36811: Fix a C compiler warning in _elementtree.c. (GH-13109)
https://github.com/python/cpython/commit/6b95149eccac540a911a5ada03fcb7d623a0de37
msg341538 - (view) Author: Stefan Behnel (scoder) * (Python committer) Date: 2019-05-06 15:37
Thanks for the report. In simple cases like this, I think it's fine to comment in the original ticket and/or pull request. There's no real need for a dedicated ticket, at least not before an official release.
msg341547 - (view) Author: Stéphane Wirtel (matrixise) * (Python committer) Date: 2019-05-06 15:50
Sure, you are right but I was working on an issue with Julien Palard. next time I will fix it myself.

Thanks
History
Date User Action Args
2022-04-11 14:59:14adminsetgithub: 80992
2019-05-06 15:50:50matrixisesetmessages: + msg341547
2019-05-06 15:37:22scodersetstatus: open -> closed
type: compile error
messages: + msg341538

resolution: fixed
stage: patch review -> resolved
2019-05-06 15:36:38scodersetmessages: + msg341537
2019-05-06 14:45:03scodersetkeywords: + patch
stage: patch review
pull_requests: + pull_request13024
2019-05-06 14:27:22matrixisecreate