bpo-36811: Fix a C compiler warning in _elementtree.c. (GH-13109)